--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         
         <!-- TODO: Change the URL to your own tomcat server. Used to deploy your WAR-file 
         -->
-        <remote.server>https://barfodpraetorius.dk/manager/text</remote.server>
+        <remote.server>https://helvedesmaskine.dk/manager/text</remote.server>
         
     </properties>
     
