--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <version>1</version>
     <packaging>war</packaging>
 
-    <name>TeamOne-CA3</name>
+    <name>TeamOne-CA3(Rasmus)</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
@@ -227,7 +227,7 @@
                     </execution>
                 </executions>
             </plugin>
-        </plugins>
+        </plugins> 
     </build>
 
 </project>
